Copyright notice added to every source file in repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Numbers, some tests with numbers, using number theory.
+# Copyright (C) 2022  Dirk "YouDirk" Lehmann.  All rights reserved.
+
 # Python cache
 /__pycache__
 
